Header collapses on small screen; better padding on About; added react-bootstrap; fix on yml

--- a/front-end/src/styles/appHeader.scss
+++ b/front-end/src/styles/appHeader.scss
@@ -4,6 +4,9 @@ header {
   background: $dark-transparent;
   font-family: $headings-font-family;
   a {
-    color: $primary;
+    color: $primary !important;
+  }
+  .navbar {
+    padding: 0;
   }
 }
